# Faber

./: .gitignore  CMakeLists.txt  README.md
VS/: FaberFramework.filters  (+3 more)
sources/: CMakeLists.txt  main.cpp
sources/app/: app-init-context.h  app.cpp  app.h
sources/engine/actor/: actor.cpp
sources/engine/actor/src/: CMakeLists.txt
sources/engine/engine-object/: engine-object.cpp  engine-object.h
sources/engine/engine-object/src/: CMakeLists.txt
sources/engine/lua-wrapper/: lua-wrapper.cpp  lua-wrapper.h
sources/engine/src/: CMakeLists.txt
sources/engine/transformable/: transformable.cpp  transformable.h
sources/engine/transformable/src/: CMakeLists.txt  transformable.cpp
sources/faber/: CMakeLists.txt  faber.h  framework.h
sources/faber/app/: CMakeLists.txt  app-init-context.h  app.h
sources/faber/app/framework-app-listener/: framework-app-listener.h
sources/faber/app/framework-app-listener/src/: CMakeLists.txt  framework-app-listener.cpp
sources/faber/app/src/: CMakeLists.txt  app.cpp
sources/faber/engine/actor/: actor.h
sources/faber/engine/actor/src/: CMakeLists.txt  actor.cpp
sources/faber/engine/engine-object/: engine-object.h
sources/faber/engine/engine-object/src/: CMakeLists.txt  engine-object.cpp
sources/faber/engine/src/: CMakeLists.txt  engine.cpp
sources/faber/engine/transformable/src/: CMakeLists.txt
sources/faber/framework/: CMakeLists.txt  framework.h
sources/faber/framework-listener/: framework-listener.h
sources/faber/framework-listener/src/: CMakeLists.txt  framework-listener.cpp
sources/faber/framework/app/: app-init-context.h  app.h
sources/faber/framework/app/framework-app-listener/: framework-app-listener.h
sources/faber/framework/app/src/: CMakeLists.txt  app.cpp
sources/faber/framework/framework-listener/: framework-listener.h
sources/faber/framework/framework-listener/src/: CMakeLists.txt  framework-listener.cpp
sources/faber/framework/input/src/: CMakeLists.txt  input.cpp
sources/faber/framework/logger/: logger.h
sources/faber/framework/logger/src/: CMakeLists.txt  logger.cpp
sources/faber/framework/macros/: count-params.h  expand.h  streamize.h
sources/faber/framework/macros/src/: CMakeLists.txt  macros.cpp
sources/faber/framework/renderer/: renderer.h
sources/faber/framework/renderer/color/: color.h
sources/faber/framework/renderer/creator/: renderer-creator.h
sources/faber/framework/renderer/dx/: dx-renderer.h
sources/faber/framework/renderer/opengl/: opengl-renderer.h
sources/faber/framework/renderer/render-frame/: render-frame.h
sources/faber/framework/renderer/renderer-context/: renderer-context.h
sources/faber/framework/renderer/shader/: shader.h
sources/faber/framework/renderer/src/: CMakeLists.txt  renderer.cpp
sources/faber/framework/src/: CMakeLists.txt  framework.cpp
sources/faber/framework/system/: system-factory.h
sources/faber/framework/system/src/: CMakeLists.txt  system-factory.cpp
sources/faber/framework/system/system-win/: windows-objects-factory.cpp  windows-objects-factory.h
sources/faber/framework/timer/src/: CMakeLists.txt  timer.cpp
sources/faber/framework/window/framework-window-listener/: framework-window-listener.cpp  framework-window-listener.h
sources/faber/framework/window/src/: CMakeLists.txt  window.cpp
sources/faber/framework/window/window-win/: window-win.cpp
sources/faber/input/: input.h
sources/faber/input/src/: CMakeLists.txt  input.cpp
sources/faber/logger/: logger.h
sources/faber/logger/src/: CMakeLists.txt  logger.cpp
sources/faber/macros/: count-params.h  streamize.h
sources/faber/macros/src/: CMakeLists.txt  macros.cpp
sources/faber/renderer/: CMakeLists.txt  renderer.h
sources/faber/renderer/color/: color.h
sources/faber/renderer/color/src/: CMakeLists.txt  color.cpp
sources/faber/renderer/creator/: renderer-creator.h
sources/faber/renderer/creator/src/: CMakeLists.txt  renderer-creator.cpp
sources/faber/renderer/dx/: CMakeLists.txt  dx-renderer.h
sources/faber/renderer/dx/dx-renderer-context/: CMakeLists.txt  dx-renderer-context.h
sources/faber/renderer/dx/src/: CMakeLists.txt  dx-renderer.cpp
sources/faber/renderer/opengl/: CMakeLists.txt  opengl-renderer.h  opengl-surface-bitfields.h
sources/faber/renderer/opengl/opengl-render-frame/: opengl-render-frame.h
sources/faber/renderer/render-frame/: render-frame.h
sources/faber/renderer/renderer-context/: renderer-context.h
sources/faber/renderer/shader/: shader.h
sources/faber/renderer/src/: CMakeLists.txt  renderer.cpp
sources/faber/src/: CMakeLists.txt  framework.cpp
sources/faber/system/: CMakeLists.txt  system-factory.h
sources/faber/system/src/: CMakeLists.txt  system-factory.cpp
sources/faber/system/system-win/: windows-objects-factory.h
sources/faber/timer/src/: CMakeLists.txt  timer.cpp
sources/faber/window/: CMakeLists.txt
sources/faber/window/framework-window-listener/: framework-window-listener.h
sources/faber/window/src/: CMakeLists.txt  window.cpp
sources/framework/: framework.cpp  framework.h
sources/framework/framework-listener/: framework-listener.cpp  framework-listener.h
sources/framework/logger/: logger.cpp  logger.h
sources/framework/macros/: concat.h  count-params.h  macros.cpp  streamize.h
sources/framework/renderer/: render-frame.cpp  render-frame.h  renderer-creator.h  renderer-factory.h  renderer.cpp  renderer.h
sources/framework/renderer/color/: color.h
sources/framework/renderer/dx/: dx-renderer.h
sources/framework/renderer/opengl/: opengl-renderer.cpp  opengl-renderer.h  opengl-surface-bitfields.h
sources/framework/renderer/renderer-context/: renderer-context.h
sources/framework/renderer/shader/: shader-stage.cpp  shader-stage.h  shader.h
sources/framework/system/: system-factory.cpp  system-factory.h
sources/framework/system/windows/: windows-objects-factory.cpp  windows-objects-factory.h
sources/framework/timer/: timer.cpp  timer.h
sources/framework/window/: resolution.h  window.cpp  window.h
sources/framework/window/windows/: window-win.cpp  window-win.h
(+194 files in other folders)
