set(FABER_FRAMEWORK_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..)
add_subdirectory(src)

add_subdirectory(app)
add_subdirectory(framework-listener)
add_subdirectory(input)
add_subdirectory(logger)
add_subdirectory(macros)
add_subdirectory(renderer)
add_subdirectory(system)
add_subdirectory(timer)
add_subdirectory(window)